--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,46 @@
-DB_HOST=
+
+# database configuration
+DB_HOST=localhost
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
-DB_PORT=
+DB_PORT=3306
 
+# port for the application
 PORT=
 
+# smtp configuration
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USERNAME=
 SMTP_PASSWORD=
 
+
 SECURE_EMAIL_DOMAIN=
 EMAIL_DOMAIN=
 
 SECRET_KEY_ACCESS_TOKEN=
+
+# in minute
 ACCESS_TOKEN_TIME=
 
 SECRET_KEY_REFRESH_TOKEN=
+
+# in day
 REFRESH_TOKEN_TIME=
 
+LINK_BACKEND=
 LINK_FRONTEND=
 
+# both in minute
 EXPIRED_OTP=
 TIME_OUT_LIMIT=
 
+# int only
 LIMIT_PRODUCTS=
+
+MIDTRANS_SERVER_KEY=
+
+SUPABASE_URL=
+SUPABASE_TOKEN=
+SUPABASE_BUCKET=
